--- a/html/signuppage.html
+++ b/html/signuppage.html
@@ -51,12 +51,15 @@
             <input type="email" placeholder="Enter your email here" id="email" required>
             <label>Password</label>
             <input type="password" placeholder="******" id="pwd" required>
-            <input type="submit" value="button2" id="btn2">
-            <input type="button" value="button1" id="btn1" onclick="myfunc()">
-            <input type="button" value="button3" id="btn3" onclick="myfunc1()">
+            <input type="submit" value="button1" id="btn1">
+            <input type="button" value="Alert" id="btn2" onclick="myfunc()">
+            <input type="button" value="Prompt" id="btn3" onclick="myfunc1()">
+            <input type="button" value="confirm" id="btn4" onclick="myfunc2()">
+
         </div>
     </form>
     <p id="demo"></p>
+    <!-- <p id="demo2"></p> -->
             
 </div>
 </div>
@@ -67,9 +70,17 @@
     }
     function myfunc1(){
         let detail = prompt("please enter your first name","");
-        
 
         document.getElementById("demo").innerHTML="your first name is "+ detail;
+    }
+    function myfunc2(){
+        let text = "press a button!\nEither OK or Cancel.";
+        if(confirm(text)==true){
+            text = "You pressed OK!";
+        }else {
+            text = "You Canceled!";
+        }
+        document.getElementById("demo").innerHTML = text;
     }
 
 </script>
