correction in div remove all div and take only one div

--- a/html/signuppage.html
+++ b/html/signuppage.html
@@ -11,30 +11,30 @@
 </head>
 <body>
     <div class="pagecontainer">
-    <div class="maincontainer">
-        <label>Signup</label>
+    <!-- <div class="maincontainer"> -->
+        <header id="heading">Signup</header>
         <form action="">
-        <div class="container">
+        <!-- <div class="container"> -->
             
             <label>FirstName</label>
-            <input type="text" placeholder="Enter your Firstname" id="fn" required>
+            <input type="text" placeholder="Enter your Firstname" id="fn" required><br><br>
             <label>LastName</label>    
-            <input type="text" placeholder="Enter your Lastname" id="ln">
+            <input type="text" placeholder="Enter your Lastname" id="ln"><br><br>
             <label>Email Id</label>
-            <input type="email" placeholder="Enter your email here" id="email" required>
+            <input type="email" placeholder="Enter your email here" id="email" required><br><br>
             <label>Password</label>
-            <input type="password" placeholder="******" id="pwd" required>
+            <input type="password" placeholder="******" id="pwd" required><br><br>
             <input type="submit" value="button1" id="btn1">
             <input type="button" value="Alert" id="btn2" onclick="myfunc()">
             <input type="button" value="Prompt" id="btn3" onclick="myfunc1()">
             <input type="button" value="confirm" id="btn4" onclick="myfunc2()">
 
-        </div>
+        <!-- </div> -->
     </form>
     <p id="demo"></p>
     <!-- <p id="demo2"></p> -->
             
-</div>
+<!-- </div> -->
 </div>
 <script>
 
