--- a/html/signuppage.html
+++ b/html/signuppage.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-
-    </style>
+    
+    <script src="signuppage.js"></script>
 </head>
 <body>
     <div class="pagecontainer">
@@ -36,26 +35,5 @@
             
 <!-- </div> -->
 </div>
-<script>
-
-    function myfunc(){
-        alert("this is your first alert!");
-    }
-    function myfunc1(){
-        let detail = prompt("please enter your first name","");
-
-        document.getElementById("demo").innerHTML="your first name is "+ detail;
-    }
-    function myfunc2(){
-        let text = "press a button!\nEither OK or Cancel.";
-        if(confirm(text)==true){
-            text = "You pressed OK!";
-        }else {
-            text = "You Canceled!";
-        }
-        document.getElementById("demo").innerHTML = text;
-    }
-
-</script>
 </body>
 </html>
