--- a/html/signuppage.html
+++ b/html/signuppage.html
@@ -15,6 +15,8 @@
         
 
         <div id="success-message">Signed up successfully</div>
+        <div id="error-message1">Please enter password atleast 8-10 charecter</div>
+        <div id="error-message2">Not possible! please enter 8-10 charecter</div>
 
         <header id="heading">Signup</header>
         <form onsubmit="return myfunc3(event)">
