vote eligibility by js complete vote.html,vote.css,vote.js added

--- a/html/home.html
+++ b/html/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="wrapper">
-        <div class="conatiner">
+        <!-- <div class="conatiner"> -->
             <header class="head">
                 <div class="logo">
                     <figure>
@@ -68,10 +68,10 @@
                     </div>
                 </section>
                 <section class="belowfooter">
-                    <p>@copyright:Bidesh saha 2024 june 4 </p>
+                    <span>@copyright:Bidesh saha 2024 june 4</span> 
                 </section>
             </footer>
-        </div>
+        <!-- </div> -->
     </div>
 </body>
 </html>
