adding feature image on popular post,simplify header code,add image to new post

--- a/html/home.html
+++ b/html/home.html
@@ -16,7 +16,7 @@
                         <figcaption>Production Hub</figcaption>
                     </figure>
                 </div>
-                <nav id="nav">
+                <nav class="nav">
                     <ul>
                         <li>Home</li>
                         <li>Blog</li>
@@ -34,21 +34,22 @@
             <div class="newPost">
                 <h3>New posts</h3>
                 <ul>
-                    <a href="#"><li>post1</li></a>
-                    <a href="#"><li>post2</li></a>
-                    <a href="#"><li>post3</li></a>
-                    <a href="#"><li>post4</li></a>
-                    <a href="#"><li>post5</li></a>
-                    <a href="#"><li>post6</li></a>
+                    <a href="#"><img src="blog image.jpg"></a>
+                    <a href="#">
+                        <p>The post on Instragram</p>
+                        <p>14/06/2024</p>
+                        <p>Bidesh</p>
+                    </a>
+
                 </ul>
 
             </div>
             <div class="popularPost">
                 <h3>Popular posts</h3>
                 <ul>
-                    <a href="#"><li><figure><img src=""><figcaption>popular post1</figcaption></figure>one</li></a>
-                    <a href="#"><li><figure><img src=""><figcaption>popular post1</figcaption></figure>Two</li></a>
-                    <a href="#"><li><figure><img src=""><figcaption>popular post1</figcaption></figure>Three</li></a>
+                    <a href="#"><li><figure><img src="F1.jpg"><figcaption>popular post1</figcaption></figure>one</li></a>
+                    <a href="#"><li><figure><img src="F2.jpg"><figcaption>popular post1</figcaption></figure>Two</li></a>
+                    <a href="#"><li><figure><img src="F3.png"><figcaption>popular post1</figcaption></figure>Three</li></a>
                     
                 </ul>
             </div>
