--- a/html/home.html
+++ b/html/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Home</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="./CSS/home.css">
 </head>
 <body>
     <div id="wrapper">
@@ -12,7 +12,7 @@
             <header class="head">
                 <div class="logo">
                     <figure>
-                        <img src="package-logo_10250-1057.avif" alt="" id="logoImg">
+                        <img src="./images/homepage-images/package-logo_10250-1057.avif" alt="" id="logoImg">
                         <figcaption>Production Hub</figcaption>
                     </figure>
                 </div>
@@ -29,12 +29,12 @@
                 </nav>
             </header>
             <div class="imgSection">
-                <img src="west-bengal.jpg" alt="" id="slideImg">
+                <img src="./images/homepage-images/west-bengal.jpg" alt="" id="slideImg">
             </div>
             <div class="newPost">
                 <h3>New posts</h3>
                 <ul>
-                    <a href="#"><img src="blog image.jpg"></a>
+                    <a href="#"><img src="./images/homepage-images/blog image.jpg"></a>
                     <a href="#">
                         <p>The post on Instragram</p>
                         <p>14/06/2024</p>
@@ -47,9 +47,9 @@
             <div class="popularPost">
                 <h3>Popular posts</h3>
                 <ul>
-                    <a href="#"><li><figure><img src="F1.jpg"><figcaption>popular post1</figcaption></figure>one</li></a>
-                    <a href="#"><li><figure><img src="F2.jpg"><figcaption>popular post1</figcaption></figure>Two</li></a>
-                    <a href="#"><li><figure><img src="F3.png"><figcaption>popular post1</figcaption></figure>Three</li></a>
+                    <a href="#"><li><figure><img src="./images/homepage-images/F1.jpg"><figcaption>popular post1</figcaption></figure>one</li></a>
+                    <a href="#"><li><figure><img src="./images/homepage-images/F2.jpg"><figcaption>popular post1</figcaption></figure>Two</li></a>
+                    <a href="#"><li><figure><img src="./images/homepage-images/F3.png"><figcaption>popular post1</figcaption></figure>Three</li></a>
                     
                 </ul>
             </div>
