--- a/html/vote.html
+++ b/html/vote.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vote condition</title>
-    <link rel="stylesheet" href="vote.css">
-    <script src="vote.js"></script>
+    <link rel="stylesheet" href="./CSS/vote.css">
+    <script src="./JS/vote.js"></script>
 
 </head>
 <body>
