testing with external messages from html page fetch to js page

--- a/html/vote.html
+++ b/html/vote.html
@@ -9,8 +9,11 @@
 
 </head>
 <body>
+    <div id="validAge">please enter a valid age</div>
+    <div id="Eligible">you are elegible for voteing.</div>
+    <div id="notEligible">you are not elegible for voteing.</div>
     <div class="container">
-        
+
         <form onsubmit="return check(event)">
             <label>Age</label>
             <input type="number" placeholder="Enter your Age" id="age">
