work on 29-06-2024 offline

--- a/html/home.html
+++ b/html/home.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Home</title>
     <link rel="stylesheet" href="./CSS/home.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="./JS/home.js"></script>
 </head>
 <body>
     <div id="wrapper">
         <!-- <div class="conatiner"> -->
-            <header class="head">
+            <header class="head" id="headid">
                 <div class="logo">
                     <figure>
                         <img src="./images/homepage-images/package-logo_10250-1057.avif" alt="" id="logoImg">
@@ -22,7 +24,7 @@
                         <li>Blog</li>
                         <li>Contact Us</li>
                         <li>About Us</li>
-                        <li>Login</li>
+                       <li id="login">login</li> 
                         <li>SignUp</li>
                     </ul>
                 
