login eye toggle complete

--- a/html/signuppage.html
+++ b/html/signuppage.html
@@ -31,12 +31,13 @@
             <input type="email" placeholder="Enter your email here" id="email" required><br><br>
             <label>Password</label>
             <input type="password" placeholder="******" id="pwd" required><br><br>
-            <input type="submit" value="button1" id="btn1">
-            <input type="button" value="Alert" id="btn2" onclick="myfunc()">
+            <input type="submit" value="Submit" id="btn1">
+            <!-- <input type="button" value="Alert" id="btn2" onclick="myfunc()">
             <input type="button" value="Prompt" id="btn3" onclick="myfunc1()">
-            <input type="button" value="confirm" id="btn4" onclick="myfunc2()">
+            <input type="button" value="confirm" id="btn4" onclick="myfunc2()"> -->
 
         <!-- </div> -->
+        <p>Already have a account ?<a href="loginpage.php">Login</a></p>
     </form>
      <div class="display-sms"><p id="demo"></p></div> 
     
